# BTCDailyBot

./: .gitignore  Cargo.toml  README.md
db/: 0001_chats_table.sql
src/: bot_client.rs  main.rs
src/server/: binance_api.rs  chats.rs  chats_utils.rs  db.rs  mod.rs  side_utils.rs
