[package]
name = "btc_daily_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
teloxide = "0.12.2"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
